--- a/prjLegados/Views/Login/Login.cshtml
+++ b/prjLegados/Views/Login/Login.cshtml
@@ -16,7 +16,7 @@
             </div>
             <div class="wrap">
                 <p class="form-title">
-                    Sign In
+                    Inicio de Sesión
                 </p>
                 <form class="login">
                     <select id="Roles">
@@ -26,26 +26,37 @@
                     <input type="text" id="txtUsername" placeholder="Username" />
                     <input type="password" id="txtPassword" placeholder="Password" />
                     <input value="Sign In" id="SignIn" class="btn btn-success btn-sm" />
-                    <div class="remember-forgot">
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="checkbox">
-                                    <label>
-                                        <input type="checkbox" />
-                                        Remember Me
-                                    </label>
-                                </div>
-                            </div>
-                            <div class="col-md-6 forgot-pass-content">
-                                <a href="javascription:void(0)" class="forgot-pass">Forgot Password</a>
-                            </div>
-                        </div>
-                    </div>
                 </form>
             </div>
         </div>
     </div>
-    <div class="posted-by">Posted By: <a href="http://www.jquery2dotnet.com">Bhaumik Patel</a></div>
+    <!-- Button to open the modal -->
+    <button onclick="document.getElementById('id01').style.display='block'">Registrarse</button>
+
+    <div id="id01" class="modal">
+        <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">times;</span>
+        <form class="modal-content" action="/action_page.php">
+            <div class="container">
+                <h1>Registro</h1>
+               
+                <hr>
+                <label for="email"><b>Email</b></label>
+                <input type="text" id="usuario" placeholder="Enter Email" name="email" required>
+
+                <label for="psw"><b>Password</b></label>
+                <input type="password" id="pass" placeholder="Enter Password" name="psw" required>
+
+                <label for="psw-repeat"><b>Repeat Password</b></label>
+                <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
+
+                <div class="clearfix">
+                    <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
+                    <!----<button type="submit" class="signup">Registrar</button>-->
+                    <input value="Registrar" id="SignUp" class="btn btn-success btn-sm" />
+                </div>
+            </div>
+        </form>
+    </div>
 </div>
 
 <link href="~/Content/LoginStyle.css" rel="stylesheet" />
@@ -81,6 +92,24 @@
 
         });
 
+        $("#SignUp").click(function () {
+            
+            var strUsername = $("#usuario").val();
+            var strPassword = $("#pass").val();
+           
+                $.ajax({
+                    type: "POST",
+                    url: "/Login/ingresarUsuario",
+                    data: { strUsername: strUsername, strPassword: strPassword },
+                    success: function (response) {
+                        alert(response);
+                        window.location.href = "/Login/Login";
+                    }
+                });
+           
+
+        });
+     
     </script>
 
 }
