--- a/prjLegados/Views/Admin/Admin.cshtml
+++ b/prjLegados/Views/Admin/Admin.cshtml
@@ -4,5 +4,327 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Admin</h2>
+<div class="container">
 
+    <h2>Manejo de Usuarios</h2>
+
+    <br /><br />
+    <button id="btnCon" type="button" class="btn btn-primary">Contenedor</button>
+    <button id="btnSal" type="button" class="btn btn-primary">Salir</button><br /><br />
+
+    <table class="table table-bordered table-hover">
+
+        <thead>
+
+            <tr>
+
+                <th>
+
+                    ID
+
+                </th>
+
+                <th>
+
+                    Nombre
+
+                </th>
+
+            </tr>
+
+        </thead>
+
+        <tbody class="tbody"></tbody>
+
+    </table>
+
+</div>
+
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+
+    <div class="modal-dialog">
+
+        <div class="modal-content">
+
+            <div class="modal-header">
+
+                @*<button type="button" class="close" data-dissmiss="modal"><span aria-hidden="true">×</span></button>*@
+
+                <button type="button" class="close" data-dismiss="modal">×</button>
+
+            </div>
+
+            <div class="modal-body">
+
+                <form>
+
+                    <div class="form-group">
+
+                        <label for="EmployeeId">ID</label>
+
+                        <input type="text" class="form-control" id="EmployeeID" placeholder="Id" disabled="disabled" />
+
+                    </div>
+
+                    <div class="form-group">
+
+                        <label for="Name">Nombre</label>
+
+                        <input type="text" class="form-control" id="Name" placeholder="Nombre" />
+
+                    </div>>
+
+                </form>
+
+            </div>
+
+            <div class="modal-footer">
+
+                <button type="button" class="btn btn-primary" id="btnAdd" onclick="return Add();">Agregar</button>
+
+                <button type="button" class="btn btn-primary" id="btnUpdate" style="display:none;" onclick="Update();">Actualizar</button>
+
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+
+            </div>
+
+        </div>
+
+    </div>
+
+</div>
+@section Scripts{
+    <script>
+
+        $("#btnCon").click(function () {
+            window.location.href = "/Container/Container";
+        });
+
+        $("#btnSal").click(function () {
+            window.location.href = "/Login/Login";
+        });
+
+        $(document).ready(function () {
+
+            loadData();
+
+        });
+
+        //Load Data function
+
+        function loadData() {
+
+            $.ajax({
+
+                url: "/Admin/ListAdmin",
+
+                type: "GET",
+
+                contentType: "application/json;charset=utf-8",
+
+                dataType: "json",
+
+                success: function (result) {
+
+                    var html = '';
+                    $.each(result, function (key, item) {
+
+                        html += '<tr>';
+
+                        html += '<td>' + item.idUsuario + '</td>';
+
+                        html += '<td>' + item.nombreUsuario + '</td>';
+
+                        html += '<td><a href="#" onclick="return getbyID(' + item.idUsuario + ')">Editar</a> | <a href="#" onclick="Delete(' + item.idUsuario + ')">Borrar</a></td>';
+
+                        html += '</tr>';
+
+                    });
+
+                    $('.tbody').html(html);
+
+                },
+
+                error: function (errormessage) {
+
+                    alert(errormessage.responseText);
+
+                }
+
+            });
+
+        }
+
+
+        //Function for getting the Data Based upon Employee ID
+
+        function getbyID(EmpID) {
+
+            $('#Name').css('border-color', 'lightgrey');
+
+            $.ajax({
+
+                url: "/Admin/GetbyID/" + EmpID,
+
+                typr: "GET",
+
+                contentType: "application/json;charset=UTF-8",
+
+                dataType: "json",
+
+                success: function (result) {
+
+                    $('#EmployeeID').val(result.idUsuario);
+
+                    $('#Name').val(result.nombreUsuario);
+
+                    $('#myModal').modal('show');
+
+                    $('#btnUpdate').show();
+
+                    $('#btnAdd').hide();
+
+                },
+
+                error: function (errormessage) {
+
+                    alert(errormessage.responseText);
+
+                }
+
+            });
+
+            return false;
+
+        }
+
+        //function for updating employee's record
+
+        function Update() {
+
+            var res = validate();
+
+            if (res == false) {
+
+                return false;
+
+            }
+
+            var inventario = {
+                idUsuario: $('#EmployeeID').val(),
+
+                nombreUsuario: $('#Name').val(),
+
+
+            };
+
+            $.ajax({
+
+                url: "/Admin/Update",
+
+                data: JSON.stringify(inventario),
+
+                type: "POST",
+
+                contentType: "application/json;charset=utf-8",
+
+                dataType: "json",
+
+                success: function (result) {
+                    alert(result);
+                    loadData();
+
+                    $('#myModal').modal('hide');
+
+                    $('#EmployeeID').val("");
+
+                    $('#Name').val("");
+                },
+
+                error: function (errormessage) {
+
+                    alert(errormessage.responseText);
+
+                }
+
+            });
+
+        }
+
+        //function for deleting employee's record
+
+        function Delete(ID) {
+
+            var ans = confirm("Está seguro que quiere eliminar este usuario?");
+
+            if (ans) {
+
+                $.ajax({
+
+                    url: "/Admin/Delete/" + ID,
+
+                    type: "POST",
+
+                    contentType: "application/json;charset=UTF-8",
+
+                    dataType: "json",
+
+                    success: function (result) {
+
+                        loadData();
+
+                    },
+
+                    error: function (errormessage) {
+
+                        alert(errormessage.responseText);
+
+                    }
+
+                });
+
+            }
+
+        }
+
+        //Function for clearing the textboxes
+
+        function clearTextBox() {
+
+            $('#EmployeeID').val("");
+
+            $('#Name').val("");
+
+            $('#btnUpdate').hide();
+
+            $('#btnAdd').show();
+
+            $('#Name').css('border-color', 'lightgrey');
+
+        }
+
+        //Valdidation using jquery
+
+        function validate() {
+
+            var isValid = true;
+
+            if ($('#Name').val().trim() == "") {
+
+                $('#Name').css('border-color', 'Red');
+
+                isValid = false;
+
+            }
+
+            else {
+
+                $('#Name').css('border-color', 'lightgrey');
+
+            }     return isValid;
+
+        }
+
+    </script>
+
+}
