--- a/prjLegados/Views/Admin/Admin.cshtml
+++ b/prjLegados/Views/Admin/Admin.cshtml
@@ -10,6 +10,7 @@
 
     <br /><br />
     <button id="btnCon" type="button" class="btn btn-primary">Contenedor</button>
+    <button id="btnLog" type="button" class="btn btn-primary">Historial de Usuarios</button>
     <button id="btnSal" type="button" class="btn btn-primary">Salir</button><br /><br />
 
     <table class="table table-bordered table-hover">
@@ -95,7 +96,9 @@
 </div>
 @section Scripts{
     <script>
-
+        $("#btnLog").click(function () {
+            window.location.href = "/Log/Log";
+        });
         $("#btnCon").click(function () {
             window.location.href = "/Container/Container";
         });
